Archive2/49/772a37e770365e/output
main.cpp:51:7: error: no member named 'f' in 'foo<'H', 'a', 'l', 'l', 'o'>'
    m.f();
    ~ ^
1 error generated.
